tests/PhiCore/compile_failure/src/Core/NotNullScopePtr.construct_nullptr.fail.cpp
#include <Phi/Core/ScopePtr.hpp>

int main()
{
    phi::NotNullScopePtr<int>(nullptr);
}
